--- a/src/Variables.scss
+++ b/src/Variables.scss
@@ -7,7 +7,7 @@ $color-6: #ffd46e;
 $color-7: #000c14;
 $color-8: #00ff00;
 $color-9: #ff0000;
-//$color-10: none;
+$color-10: #e3e3e3;
 $color-11: rgba(0, 6, 11, 0.9);
 //$color-12: none;
 //$color-13: none;
