много правок, правка хидера для нажатия, правка фака по базам, для удобства и облегчения, страница карты, страница поддержки с мониторингами, правка смены пароля, и скорее всего то что я забыл тут указать

--- a/src/common/header/Header.scss
+++ b/src/common/header/Header.scss
@@ -158,11 +158,12 @@
               }
 
               a {
-                width: auto;
+                display: flex;
+                width: 100%;
                 font-size: 20px;
-                line-height: 24px;
-                height: 24px;
-                margin: 10px;
+                line-height: 44px;
+                height: 44px;
+                padding: 0 0 0 10px;
               }
             }
           }
