--- a/src/modules/components/[0_grouped_0]-Profile/change-password/Change-password.scss
+++ b/src/modules/components/[0_grouped_0]-Profile/change-password/Change-password.scss
@@ -17,45 +17,64 @@
     color: $color-3;
   }
 
-  .input-pass {
-    width: 350px;
-    height: 45px;
-    line-height: 45px;
-    outline: none;
-    background: $color-7;
-    border: 0.5px solid $color-22;
-    border-radius: 5px;
-    transition: all 0.25s ease-in-out;
-    color: $color-8;
-    padding-left: 10px;
-    padding-right: 10px;
-    margin: 0 auto;
-    margin-top: 20px;
+  form {
+    display: flex;
+    flex-direction: column;
 
-    &:hover,
-    &:focus,
-    &:active {
+    .input-pass {
+      width: 350px;
+      height: 45px;
+      line-height: 45px;
       outline: none;
+      background: $color-7;
+      border: 0.5px solid $color-22;
+      border-radius: 5px;
+      transition: all 0.25s ease-in-out;
+      color: $color-8;
+      padding-left: 10px;
+      padding-right: 10px;
+      margin: 0 auto;
+      margin-top: 20px;
+
+      &:hover,
+      &:focus,
+      &:active {
+        outline: none;
+      }
     }
-  }
 
-  .bt-pass {
-    background-color: $color-14;
-    cursor: pointer;
-    transition: all 0.35s ease;
-    width: 250px;
-    height: 50px;
-    line-height: 50px;
-    font-weight: 400;
-    font-size: 20px;
-    margin: 0 auto;
-    margin-top: 20px;
-    color: $color-3;
-    border-radius: 15px;
-    border: none;
+    .error {
+      bottom: 25px;
+      width: auto;
+      max-width: 300px;
+      min-width: 225px;
+      font-size: 16px;
+      height: 20px;
+      line-height: 20px;
+      text-align: center;
+      margin: 0 auto;
+      color: $color-9;
+      transition: all 0.85s ease;
+    }
 
-    &:hover {
-      background: $color-4;
+    .bt-pass {
+      background-color: $color-14;
+      cursor: pointer;
+      transition: all 0.35s ease;
+      width: 250px;
+      height: 50px;
+      line-height: 50px;
+      font-weight: 400;
+      font-size: 20px;
+      margin: 0 auto;
+      margin-top: 20px;
+      color: $color-3;
+      border-radius: 15px;
+      border: none;
+
+      &:hover {
+        background: $color-4;
+      }
     }
   }
 }
