--- a/src/Variables.scss
+++ b/src/Variables.scss
@@ -9,7 +9,7 @@ $color-8: #00ff00;
 $color-9: #ff0000;
 $color-10: #e3e3e3;
 $color-11: rgba(0, 6, 11, 0.9);
-//$color-12: none;
+$color-12: rgb(228, 0, 127, 0.7);
 //$color-13: none;
 $color-14: #161d22;
 $color-15: #0a1217;
