--- a/src/modules/pages/maps/Maps.scss
+++ b/src/modules/pages/maps/Maps.scss
@@ -8,16 +8,94 @@
 
   .maps {
     width: 100%;
-    height: 600px;
+    height: auto;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: start;
 
-    h4 {
+    .maps-title {
       font-size: 32px;
       font-weight: 400;
       color: $color-3;
+      margin: 25px auto;
+      text-align: center;
+    }
+
+    .maps-sub-title {
+      font-size: 14px;
+      font-weight: 400;
+      line-height: 1.25;
+      color: $color-3;
       margin: 0 auto;
+      padding: 0 50px 0 50px;
+      text-align: center;
+    }
+
+    .link-btn-map {
+      font-weight: 400;
+      width: 350px;
+      height: 40px;
+      line-height: 40px;
+      color: $color-1;
+      margin: 0 auto;
+      text-align: center;
+      outline: none;
+      transition: all 0.55s ease;
+      text-decoration: none;
+
+      &:active,
+      &:visited,
+      &:hover {
+        outline: none;
+      }
+
+      &:hover {
+        color: $color-12;
+      }
+    }
+
+    .prev-map-page {
+      width: 94%;
+      max-width: 1800px;
+      margin: 15px auto;
+      height: 800px;
+      display: flex;
     }
   }
+}
+
+@media screen and (max-width: 1600px) {
+}
+
+@media screen and (max-width: 1400px) {
+}
+
+@media screen and (max-width: 1280px) {
+}
+
+@media screen and (max-width: 1024px) {
+}
+
+@media screen and (max-width: 960px) {
+}
+
+@media screen and (max-width: 768px) {
+  .main-maps {
+    .maps {
+      padding-top: 25px;
+
+      .maps-sub-title {
+        padding: 0 20px 0 20px;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 640px) {
+}
+
+@media screen and (max-width: 480px) {
+}
+
+@media screen and (max-width: 360px) {
 }
