--- a/src/modules/pages/support/Support.scss
+++ b/src/modules/pages/support/Support.scss
@@ -19,36 +19,18 @@
       font-size: 32px;
       font-weight: 400;
       color: $color-3;
-      margin: 25px auto;
-      text-align: center;
-    }
-
-    .sub-title-support {
-      font-size: 16px;
-      font-weight: 400;
-      color: $color-3;
       margin: 0 auto;
-      padding: 0 50px 0 50px;
-      text-align: center;
-    }
-
-    .footer-support {
-      font-size: 16px;
-      font-weight: 400;
-      color: $color-3;
-      margin: 10px auto;
-      padding: 0 50px 0 50px;
       text-align: center;
     }
 
     .support-link {
       font-weight: 400;
-      width: 350px;
-      height: 40px;
-      line-height: 40px;
+      width: auto;
+      max-width: 350px;
+      height: 25px;
+      line-height: 25px;
       color: $color-1;
-      margin: 0 auto;
-      text-align: center;
+      margin: 0 auto 0 75px;
       outline: none;
       transition: all 0.55s ease;
       text-decoration: none;
@@ -64,6 +46,75 @@
       }
     }
 
+    .don-block {
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+      height: 480px;
+      width: auto;
+      margin: 0 auto;
+
+      .text {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        width: 100%;
+        max-width: 660px;
+        height: 100%;
+
+        .sub-title-support {
+          display: flex;
+          font-size: 16px;
+          font-weight: 400;
+          color: $color-3;
+          margin: 5px 0;
+          text-align: start;
+          line-height: 1.5;
+          text-indent: 3ch;
+          width: 100%;
+        }
+
+        .link {
+          display: flex;
+          flex-direction: column;
+          margin: 0;
+
+        }
+
+        .footer-support {
+          font-size: 16px;
+          font-weight: 400;
+          color: $color-3;
+          margin: 10px auto 0 125px;
+          padding: 0 50px 0 50px;
+        }
+      }
+
+      .img-block-wight {
+        display: flex;
+        width: 100%;
+        max-width: 660px;
+        height: 100%;
+
+        .info-img-wight {
+          margin: 0 auto;
+        }
+      }
+    }
+
+    .block-title-sp {
+      width: 100%;
+      display: flex;
+      height: 35px;
+      line-height: 35px;
+      text-align: center;
+      color: $color-3;
+      font-weight: 400;
+      font-size: 24px;
+      justify-content: center;
+      margin: 10px auto;
+    }
+
     .monitoring-block {
       display: flex;
       flex-direction: row;
@@ -71,19 +122,6 @@
       flex-wrap: wrap;
       width: 80%;
       margin: 100px auto 0 auto;
-
-      .monitoring-title {
-        width: 100%;
-        display: flex;
-        height: 35px;
-        line-height: 35px;
-        text-align: center;
-        color: $color-3;
-        font-weight: 400;
-        font-size: 24px;
-        justify-content: center;
-        margin: 10px auto;
-      }
 
       .monitoring-card {
         width: 240px;
@@ -112,6 +150,73 @@
 
         &:hover {
           background: $color-21;
+        }
+      }
+    }
+
+    .partner-block {
+      display: flex;
+      flex-direction: column;
+      margin-top: 50px;
+
+      .support-link {
+        text-align: center;
+        width: auto;
+        margin: 0 auto 7px auto;
+      }
+
+      .superHub {
+        margin: 0 auto;
+        width: 600px;
+        height: auto;
+        display: flex;
+        flex-direction: row;
+        background: $color-7;
+        border: 0.5px solid $color-22;
+        border-radius: 5px;
+        transition: all 0.35s ease;
+
+        &:hover {
+          background: $color-21;
+        }
+
+        .logo-line-1 {
+          display: flex;
+          width: 130px;
+
+          .superhub-logo {
+            width: 100px;
+            height: 100px;
+            margin: 15px;
+          }
+        }
+
+        .logo-line-2 {
+          display: flex;
+          flex-direction: column;
+          width: 100%;
+
+          .name {
+            color: $color-3;
+            font-weight: 400;
+            width: 100%;
+            height: 24px;
+            line-height: 24px;
+            margin: 7px 0 0 0;
+            text-align: center;
+            font-size: 18px;
+          }
+
+          .sub-name {
+            color: $color-3;
+            font-weight: 400;
+            width: 100%;
+            height: auto;
+            font-size: 16px;
+            text-align: center;
+            line-height: 1.5;
+            margin: auto 0;
+          }
         }
       }
     }
