--- a/src/modules/components/warn/Warn.scss
+++ b/src/modules/components/warn/Warn.scss
@@ -5,17 +5,18 @@
   flex-direction: row;
   justify-content: center;
   width: auto;
-  height: 24px;
+  height: auto;
   line-height: 24px;
 
   .span-war {
     width: auto;
     height: auto;
+    margin: auto 0;
   }
 
   .war-h4-auth {
     padding-left: 10px;
-    height: 24px;
+    height: auto;
     line-height: 24px;
     color: $color-4;
     font-size: 14px;
@@ -45,14 +46,10 @@
 
 @media screen and (max-width: 480px) {
   .warn-block {
-    height: 100%;
+    height: auto;
     line-height: 20px;
     min-height: 40px;
-    max-height: 40px;
-
-    .span-war {
-      margin: auto 0;
-    }
+    max-height: 150px;
 
     .war-h4-auth {
       text-align: center;
@@ -63,4 +60,8 @@
 }
 
 @media screen and (max-width: 360px) {
+  .warn-block {
+    height: auto;
+    max-height: 160px;
+  }
 }
