--- a/src/modules/pages/support/Support.scss
+++ b/src/modules/pages/support/Support.scss
@@ -30,7 +30,7 @@
       height: 25px;
       line-height: 25px;
       color: $color-1;
-      margin: 0 auto 0 75px;
+      margin: 0 auto 0 25px;
       outline: none;
       transition: all 0.55s ease;
       text-decoration: none;
@@ -50,9 +50,10 @@
       display: flex;
       flex-direction: row;
       justify-content: center;
-      height: 480px;
+      height: auto;
+      min-height: 480px;
       width: auto;
-      margin: 0 auto;
+      margin: 25px auto 0 auto;
 
       .text {
         display: flex;
@@ -61,6 +62,7 @@
         width: 100%;
         max-width: 660px;
         height: 100%;
+        margin: auto 0;
 
         .sub-title-support {
           display: flex;
@@ -85,8 +87,8 @@
           font-size: 16px;
           font-weight: 400;
           color: $color-3;
-          margin: 10px auto 0 125px;
-          padding: 0 50px 0 50px;
+          margin: 12px 0 0 0;
+          padding: 0 25px 0 25px;
         }
       }
 
@@ -95,8 +97,11 @@
         width: 100%;
         max-width: 660px;
         height: 100%;
+        margin: auto 0;
 
         .info-img-wight {
+          max-width: 550px;
+          max-height: 550px;
           margin: 0 auto;
         }
       }
@@ -227,6 +232,15 @@
 }
 
 @media screen and (max-width: 1400px) {
+  .main-support {
+    .support {
+      .don-block {
+        .text {
+          margin: 0 15px;
+        }
+      }
+    }
+  }
 }
 
 @media screen and (max-width: 1280px) {
