--- a/src/modules/pages/statistic/Statistic.scss
+++ b/src/modules/pages/statistic/Statistic.scss
@@ -8,16 +8,175 @@
 
   .statistic {
     width: 100%;
-    height: 600px;
+    max-width: 1410px;
+    height: 835px;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    margin: 0 auto;
 
-    h4 {
+    .statistic-title {
       font-size: 32px;
       font-weight: 400;
       color: $color-3;
-      margin: 0 auto;
+      margin: 25px auto;
+    }
+
+    *::-webkit-scrollbar {
+      width: 8px !important;
+      background-color: rgb(32, 42, 48) !important;
+    }
+
+    .ag-root-wrapper { /* главный контейнер*/
+      border: 1px solid $color-22;
+      background: $color-7
+    }
+
+    .ag-header { /* хидер */
+      background-color: $color-7;
+      border-bottom-color: $color-22;
+    }
+
+    .ag-paging-panel {
+      border-top-color: $color-22;
+    }
+
+    .ag-header-cell {
+      transition: all 0.35s ease;
+
+      &:hover {
+        color: $color-8 !important;
+      }
+    }
+
+    .ag-row {
+      border-bottom: 1px solid $color-22;
+
+      &:nth-child(even) {
+        background-color: lighten($color-7, 2);
+      }
+
+      &:nth-child(odd) {
+        background-color: lighten($color-7, 3);
+      }
+
+      &:nth-child(20) {
+        border-bottom: none;
+      }
+    }
+
+    .ag-paging-button {
+      transition: all 0.35s ease;
+
+      &:hover {
+        color: $color-8;
+      }
+    }
+
+    .ag-disabled {
+      transition: all 0.35s ease;
+
+      &:hover {
+        color: rgba(255, 255, 255, 0.5);
+      }
+    }
+
+    .ag-center-cols-viewport {
+      overflow-x: hidden;
+    }
+
+    .ag-icon-menu:hover {
+      transition: all 0.35s ease;
+
+      &:hover {
+        color: $color-8;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 1600px) {
+}
+
+@media screen and (max-width: 1400px) {
+  .main-statistic {
+    .statistic {
+      width: auto;
+      margin: 0 50px;
+    }
+  }
+}
+
+@media screen and (max-width: 1280px) {
+  .main-statistic {
+    .statistic {
+      margin: 0 45px;
+    }
+  }
+}
+
+@media screen and (max-width: 1024px) {
+  .main-statistic {
+    .statistic {
+      margin: 0 40px;
+    }
+  }
+}
+
+@media screen and (max-width: 960px) {
+  .main-statistic {
+    .statistic {
+      .statistic-title {
+        font-size: 28px;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .main-statistic {
+    .statistic {
+      margin: 0 20px;
+
+      .statistic-title {
+        font-size: 26px;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 640px) {
+  .main-statistic {
+    .statistic {
+      margin: 0 15px;
+
+      .statistic-title {
+        font-size: 22px;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .main-statistic {
+    .statistic {
+      margin: 0 10px;
+
+      .statistic-title {
+        font-size: 18px;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 360px) {
+  .main-statistic {
+    .statistic {
+      margin: 0 8px;
+
+      .statistic-title {
+        font-size: 16px;
+        text-align: center;
+      }
     }
   }
 }
