--- a/src/modules/pages/general/General.scss
+++ b/src/modules/pages/general/General.scss
@@ -11,8 +11,6 @@
     position: relative;
     width: 100%;
     height: 100vh;
-    display: flex;
-    flex-direction: column;
 
     .main-content {
       display: flex;
@@ -21,10 +19,7 @@
       width: 100%;
 
       .main-h1 {
-        margin-top: 225px;
-        margin-left: auto;
-        margin-right: auto;
-        margin-bottom: 0;
+        margin: 255px auto 0 auto;
         width: auto;
         height: 160px;
         line-height: 160px;
@@ -141,7 +136,7 @@
   .row-3 {
     width: 100%;
     height: auto;
-    background: url(../../../bases/assets/bg5_1.png);
+    background: url(../../../bases/assets/webp/background-block.webp);
 
     .tit-block {
       .title-h3 {
