--- a/src/common/header/Header.scss
+++ b/src/common/header/Header.scss
@@ -163,7 +163,7 @@
                 font-size: 20px;
                 line-height: 44px;
                 height: 44px;
-                padding: 0 0 0 10px;
+                padding: 0 0 0 7px;
               }
             }
           }
@@ -243,10 +243,7 @@
             width: 100%;
             min-width: auto;
             max-width: 210px;
-            margin-left: 5px;
-            margin-right: 5px;
-            margin-top: 25px;
-            margin-bottom: 25px;
+            margin: 25px 5px;
 
             .title-logo {
               padding-left: 5px;
@@ -269,7 +266,7 @@
                   font-size: 18px;
                   line-height: 22px;
                   height: 22px;
-                  margin: 7px;
+                  margin: 7px 0;
                 }
               }
             }
