--- a/src/modules/pages/maps/Maps.scss
+++ b/src/modules/pages/maps/Maps.scss
@@ -11,7 +11,7 @@
     height: auto;
     display: flex;
     flex-direction: column;
-    justify-content: start;
+    justify-content: flex-start;
 
     .maps-title {
       font-size: 32px;
