--- a/src/modules/pages/statistic/Statistic.scss
+++ b/src/modules/pages/statistic/Statistic.scss
@@ -26,12 +26,12 @@
       background-color: rgb(32, 42, 48) !important;
     }
 
-    .ag-root-wrapper { /* главный контейнер*/
+    .ag-root-wrapper {
       border: 1px solid $color-22;
       background: $color-7
     }
 
-    .ag-header { /* хидер */
+    .ag-header {
       background-color: $color-7;
       border-bottom-color: $color-22;
     }
