--- a/src/modules/pages/support/Support.scss
+++ b/src/modules/pages/support/Support.scss
@@ -12,7 +12,7 @@
     height: auto;
     display: flex;
     flex-direction: column;
-    justify-content: start;
+    justify-content: flex-start;
     padding-top: 50px;
 
     .title-support {
