--- a/src/modules/components/preloader/Preload.scss
+++ b/src/modules/components/preloader/Preload.scss
@@ -3,6 +3,7 @@
 .preloader-box {
   width: 100%;
   height: 100%;
+  min-height: 700px;
   display: flex;
   flex-direction: column;
   justify-content: center;
