--- a/src/modules/components/[0_grouped_0]-shopkeepers/shulker-box/Shulker-box.scss
+++ b/src/modules/components/[0_grouped_0]-shopkeepers/shulker-box/Shulker-box.scss
@@ -7,8 +7,8 @@
   flex-wrap: wrap;
   padding: 3px;
   background: $color-7;
-  width: auto;
-  max-width: 494px;
+  width: max-content;
+  max-width: 629px;
   height: auto;
   border-radius: 5px;
   border: 1px solid $color-22;
