--- a/src/modules/components/[0_grouped_0]-shopkeepers/one-suggestions/One-suggestions.scss
+++ b/src/modules/components/[0_grouped_0]-shopkeepers/one-suggestions/One-suggestions.scss
@@ -4,22 +4,26 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
-  width: 100%;
+  width: 80%;
   height: auto;
-  max-height: 74px;
-  margin: 10px;
+  margin: 10px auto;
   padding: 10px;
+  transition: all 0.35s ease;
   background: $color-7;
   border-radius: 5px;
   border: 1px solid $color-22;
+
+  &:hover {
+    background: $color-21;
+  }
 
   .arrow-suggestions {
     color: $color-13;
     font-weight: 400;
     font-size: 48px;
     text-align: center;
-    height: 52px;
-    line-height: 52px;
+    height: 69px;
+    line-height: 69px;
     width: 100%;
     min-width: 100px;
     max-width: 100px;
