--- a/src/modules/pages/shopkeepers/Shopkeepers.scss
+++ b/src/modules/pages/shopkeepers/Shopkeepers.scss
@@ -25,10 +25,12 @@
     margin: 0 auto;
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
 
     .shop-all-suggestions {
       display: flex;
       justify-content: flex-start;
+      flex-direction: column;
       width: 35%;
       height: auto;
     }
@@ -36,8 +38,76 @@
     .shop-one-suggestions {
       display: flex;
       justify-content: flex-start;
+      flex-direction: column;
       width: 65%;
-      height: auto;
+      height: 100%;
+      position: sticky;
+      top: 50px;
+
+      .prew-shulker {
+        width: auto;
+        margin: 0 auto;
+        height: auto;
+      }
+
+      .villager-shop-info {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        margin: 10px auto 0 auto;
+        background: $color-7;
+        border-radius: 5px;
+        border: 1px solid $color-22;
+        padding: 25px;
+        width: 100%;
+        max-width: 80%;
+
+        .villager-info {
+          display: flex;
+          flex-direction: column;
+
+          .h4-style {
+            color: $color-3;
+            font-size: 16px;
+            font-weight: 400;
+            height: 30px;
+            line-height: 30px;
+
+            .span-custom-color{
+              font-weight: inherit;
+              font-size: inherit;
+              color: $color-8;
+            }
+          }
+          .h4-margin-left{
+            text-indent: 2ch;
+          }
+        }
+
+        .villager-img {
+          display: flex;
+          width: 100%;
+          min-width: 200px;
+          max-width: 225px;
+          height: 100%;
+          max-height: none;
+          position: relative;
+
+          .villager-nameplate{
+            position: absolute;
+            width: 100%;
+            font-weight: 400;
+            font-size: 18px;
+            text-align: center;
+            color: $color-8;
+            line-height: 24px;
+            height: 24px;
+          }
+          .margin-top-img{
+            margin-top: 15px;
+          }
+        }
+      }
     }
   }
 }
