добавил пару строк

--- a/src/modules/pages/shopkeepers/Shopkeepers.scss
+++ b/src/modules/pages/shopkeepers/Shopkeepers.scss
@@ -82,6 +82,9 @@
           .h4-margin-left{
             text-indent: 2ch;
           }
+          .h4-margin-bottom{
+            margin-top: auto;
+          }
         }
 
         .villager-img {
