--- a/src/modules/pages/shopkeepers/Shopkeepers.scss
+++ b/src/modules/pages/shopkeepers/Shopkeepers.scss
@@ -66,6 +66,13 @@
           outline: none;
         }
       }
+
+      .div-click{
+        width: 90%;
+        height: auto;
+        cursor: pointer;
+        margin: 10px auto;
+      }
     }
 
     .shop-one-suggestions {
