небольшице фиксы + стили на админку

--- a/src/modules/components/[0_grouped_0]-Maps-all-comp/Add-style-maps.scss
+++ b/src/modules/components/[0_grouped_0]-Maps-all-comp/Add-style-maps.scss
@@ -70,6 +70,7 @@
         &:active,
         &:focus {
           outline: none;
+          background: $color-21;
         }
 
         .option-list {
@@ -122,6 +123,7 @@
             &:active,
             &:focus {
               outline: none;
+              background: $color-21;
             }
           }
         }
