--- a/src/modules/pages/admin-dashboard/Admin-dashboard.scss
+++ b/src/modules/pages/admin-dashboard/Admin-dashboard.scss
@@ -39,7 +39,7 @@
     outline: none;
     background: $color-7;
     border: 0.5px solid $color-22;
-    border-radius: 20px;
+    border-radius: 8px;
     transition: all 0.25s ease-in-out;
     color: $color-8;
     cursor: pointer;
@@ -53,6 +53,50 @@
     }
   }
 
+  .wrapper-btn-manager {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    margin: 0 auto;
+    width: 100%;
+
+    .button-search {
+      width: auto;
+      min-width: 150px;
+      max-width: 350px;
+      height: 35px;
+      margin: 8px;
+      padding: 0 8px;
+      line-height: 30px;
+      text-align: center;
+      outline: none;
+      background: $color-7;
+      border: 0.5px solid $color-22;
+      border-radius: 5px;
+      transition: all 0.25s ease-in-out;
+      color: $color-8;
+      cursor: pointer;
+      font-size: 14px;
+
+      &:hover,
+      &:focus,
+      &:active {
+        outline: none;
+        background: $color-21;
+      }
+    }
+  }
+
+  .manager-h4 {
+    color: $color-8;
+    width: auto;
+    height: 20px;
+    line-height: 20px;
+    font-size: 20px;
+    font-weight: 400;
+    margin: 35px 175px 5px 175px;
+  }
+
   .table-cl {
     width: 100%;
     max-width: 85%;
@@ -60,9 +104,38 @@
     background: $color-7;
     margin: 5px auto;
 
+    .manager-btn {
+      width: auto;
+      height: 25px;
+      margin: auto 5px;
+      line-height: 25px;
+      text-align: center;
+      outline: none;
+      padding: 0 8px;
+      background: $color-7;
+      border: 0.5px solid $color-22;
+      border-radius: 3px;
+      transition: all 0.25s ease-in-out;
+      color: $color-8;
+      cursor: pointer;
+      font-size: 14px;
+
+      &:hover,
+      &:focus,
+      &:active {
+        outline: none;
+        background: $color-21;
+      }
+    }
+
     .thead-cl {
       height: 34px;
       line-height: 34px;
+    }
+
+    .table-coordinates {
+      width: 80px !important;
+      text-align: center;
     }
 
     .tbody-cl {
@@ -79,6 +152,48 @@
         &:nth-child(odd) {
           background-color: lighten($color-7, 2);
         }
+
+        .in-manager {
+          border: none;
+          border-radius: 0;
+          outline: none;
+          width: 100%;
+          height: 35px;
+          line-height: 35px;
+          background: transparent;
+          color: inherit;
+          padding: 0 10px;
+
+          &:focus {
+            color: $color-1;
+            border: 1px solid $color-1;
+          }
+        }
+
+        .in-manager-option {
+          width: 100%;
+          height: 35px;
+          line-height: 35px;
+          border: none;
+          border-radius: 0;
+          color: $color-8;
+          text-align: start;
+          font-size: 16px;
+          font-weight: 400;
+          outline: none !important;
+          padding: 7px;
+          background: transparent;
+          cursor: pointer;
+
+          &:hover,
+          &:active,
+          &:focus {
+            outline: none;
+            background: $color-21;
+          }
+
+
+        }
       }
     }
 
@@ -90,8 +205,8 @@
       transition: all 0.15s ease;
 
       &:hover {
-        color: $color-8;
-        border: 1px solid $color-8;
+        color: lighten($color-8, 20%) !important;
+        border: 1px solid lighten($color-8, 20%) !important;
       }
 
       &:nth-child(1) {
@@ -99,22 +214,25 @@
         width: 250px;
       }
 
-      &:nth-child(2) {
-        width: 250px;
-      }
-
-      &:nth-child(3) {
-        width: 100px;
-      }
-
-      &:nth-child(4) {
+      &:nth-child(5) {
         width: 150px;
       }
 
-      &:nth-child(5) {
-        width: 250px;
-      }
+      //&:nth-child(2) {
+      //  width: 250px;
+      //}
+      //
+      //&:nth-child(3) {
+      //  width: 100px;
+      //}
+      //
+      //&:nth-child(4) {
+      //  width: 150px;
+      //}
+      //
+      //&:nth-child(5) {
+      //  width: 250px;
+      //}
     }
-
   }
 }
