--- a/src/modules/pages/admin-dashboard/Admin-dashboard.scss
+++ b/src/modules/pages/admin-dashboard/Admin-dashboard.scss
@@ -1,4 +1,5 @@
 @import "../../../Variables.scss";
+@import "../../../Index.scss";
 
 .main-dashboard {
   display: flex;
@@ -97,7 +98,7 @@
     margin: 35px 175px 5px 175px;
   }
 
-  .table-cl {
+  .table-main-styling {
     width: 100%;
     max-width: 85%;
     border: 1px solid $color-22;
@@ -128,19 +129,86 @@
       }
     }
 
-    .thead-cl {
-      height: 34px;
-      line-height: 34px;
-    }
-
     .table-coordinates {
       width: 80px !important;
       text-align: center;
     }
 
-    .tbody-cl {
-      .tr-cl {
-        height: 34px;
+    .submit-table {
+      width: 200px !important;
+    }
+
+    .in-manager {
+      border: none;
+      border-radius: 0;
+      outline: none;
+      width: 100%;
+      height: 35px;
+      line-height: 35px;
+      background: transparent;
+      color: inherit;
+      padding: 0 10px;
+
+      &:focus {
+        color: $color-1;
+        //border: 1px solid $color-1;
+      }
+    }
+
+    .in-manager-textarea {
+      position: relative;
+      border: none;
+      border-radius: 0;
+      outline: none;
+      width: auto;
+      min-width: 100%;
+      max-width: 800px;
+      min-height: 34px;
+      max-height: 102px;
+      margin: 0;
+      background: transparent;
+      color: inherit;
+      padding: 10px;
+      vertical-align: bottom;
+
+      &:focus {
+        color: $color-1;
+      }
+    }
+
+    .in-manager-option {
+      width: 100%;
+      height: 35px;
+      line-height: 35px;
+      border: none;
+      border-radius: 0;
+      color: $color-8;
+      text-align: start;
+      font-size: 16px;
+      font-weight: 400;
+      outline: none !important;
+      padding: 7px;
+      background: transparent;
+      cursor: pointer;
+
+      &:hover,
+      &:active,
+      &:focus {
+        outline: none;
+        background: $color-21;
+      }
+    }
+
+    .table-thead-styling {
+      height: 34px;
+      line-height: 34px;
+    }
+
+    .table-tbody-styling {
+      .table-tr-styling-rows {
+        height: auto;
+        min-height: 34px;
+        max-height: 102px;
         line-height: 34px;
         border-top: 1px solid $color-22;
         transition: all 0.20s ease;
@@ -152,52 +220,12 @@
         &:nth-child(odd) {
           background-color: lighten($color-7, 2);
         }
-
-        .in-manager {
-          border: none;
-          border-radius: 0;
-          outline: none;
-          width: 100%;
-          height: 35px;
-          line-height: 35px;
-          background: transparent;
-          color: inherit;
-          padding: 0 10px;
-
-          &:focus {
-            color: $color-1;
-            border: 1px solid $color-1;
-          }
-        }
-
-        .in-manager-option {
-          width: 100%;
-          height: 35px;
-          line-height: 35px;
-          border: none;
-          border-radius: 0;
-          color: $color-8;
-          text-align: start;
-          font-size: 16px;
-          font-weight: 400;
-          outline: none !important;
-          padding: 7px;
-          background: transparent;
-          cursor: pointer;
-
-          &:hover,
-          &:active,
-          &:focus {
-            outline: none;
-            background: $color-21;
-          }
-
-
-        }
       }
     }
 
-    .th-cl {
+    .table-th-styling-columns {
+      width: auto;
+      max-width: 800px;
       color: $color-3;
       font-weight: 400;
       font-size: 16px;
@@ -206,33 +234,64 @@
 
       &:hover {
         color: lighten($color-8, 20%) !important;
-        border: 1px solid lighten($color-8, 20%) !important;
+        //border: 1px solid lighten($color-8, 20%) !important;
       }
 
       &:nth-child(1) {
         border: none;
         width: 250px;
       }
+    }
 
-      &:nth-child(5) {
-        width: 150px;
+    .modals-manager {
+      .modal-open {
+        width: auto;
+        max-width: 150px;
+        height: 25px;
+        margin: auto 8px;
+        line-height: 25px;
+        text-align: center;
+        outline: none;
+        padding: 0 8px;
+        background: $color-7;
+        border: 1px solid $color-22;
+        border-radius: 5px;
+        transition: all 0.25s ease-in-out;
+        color: $color-8;
+        cursor: pointer;
+        font-size: 14px;
+
+        &:hover,
+        &:focus,
+        &:active {
+          outline: none;
+          background: $color-21;
+        }
       }
 
-      //&:nth-child(2) {
-      //  width: 250px;
-      //}
-      //
-      //&:nth-child(3) {
-      //  width: 100px;
-      //}
-      //
-      //&:nth-child(4) {
-      //  width: 150px;
-      //}
-      //
-      //&:nth-child(5) {
-      //  width: 250px;
-      //}
+      .close-modal {
+        width: 100%;
+        max-width: 50px;
+        height: 25px;
+        margin: auto 8px;
+        line-height: 25px;
+        text-align: center;
+        outline: none;
+        background: $color-7;
+        border: 1px solid $color-22;
+        border-radius: 5px;
+        transition: all 0.25s ease-in-out;
+        color: $color-8;
+        cursor: pointer;
+        font-size: 14px;
+
+        &:hover,
+        &:focus,
+        &:active {
+          outline: none;
+          background: $color-21;
+        }
+      }
     }
   }
 }
