--- a/src/modules/pages/admin-dashboard/Admin-dashboard.scss
+++ b/src/modules/pages/admin-dashboard/Admin-dashboard.scss
@@ -1,5 +1,17 @@
 @import "../../../Variables.scss";
-@import "../../../Index.scss";
+
+@keyframes animationModal {
+  0% {
+    opacity: 0;
+    width: 0;
+    height: 0;
+  }
+  100% {
+    opacity: 1;
+    width: 100%;
+    height: 100%;
+  }
+}
 
 .main-dashboard {
   display: flex;
@@ -268,30 +280,59 @@
           background: $color-21;
         }
       }
+    }
+  }
+}
 
-      .close-modal {
-        width: 100%;
-        max-width: 50px;
-        height: 25px;
-        margin: auto 8px;
-        line-height: 25px;
-        text-align: center;
+body {
+  .modal-main {
+    position: absolute;
+    z-index: 12001;
+    background: $color-14;
+    top: 45px;
+    left: 45px;
+    right: 45px;
+    bottom: 45px;
+    width: auto;
+    height: auto;
+    color: white!important;
+
+    .close-modal {
+      position: absolute;
+      top: -40px;
+      right: -40px;
+      width: auto;
+      max-width: 150px;
+      height: 35px;
+      padding: 0 12px;
+      line-height: 35px;
+      text-align: center;
+      outline: none;
+      background: $color-7;
+      border: 1px solid $color-22;
+      border-radius: 5px;
+      transition: all 0.25s ease-in-out;
+      color: $color-8;
+      cursor: pointer;
+      font-size: 14px;
+
+      &:hover,
+      &:focus,
+      &:active {
         outline: none;
-        background: $color-7;
-        border: 1px solid $color-22;
-        border-radius: 5px;
-        transition: all 0.25s ease-in-out;
-        color: $color-8;
-        cursor: pointer;
-        font-size: 14px;
-
-        &:hover,
-        &:focus,
-        &:active {
-          outline: none;
-          background: $color-21;
-        }
+        background: $color-21;
       }
     }
+  }
+
+  .overlay-modal {
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    position: fixed;
+    z-index: 12002;
+    background: $color-2;
+    animation: animationModal 1s both ease;
   }
 }
