--- a/src/modules/pages/admin-dashboard/Admin-dashboard.scss
+++ b/src/modules/pages/admin-dashboard/Admin-dashboard.scss
@@ -288,14 +288,15 @@ body {
   .modal-main {
     position: absolute;
     z-index: 12001;
-    background: $color-14;
+    background: $color-21;
+    border: 0.5px solid $color-22;
+    border-radius: 5px;
     top: 45px;
     left: 45px;
     right: 45px;
     bottom: 45px;
     width: auto;
     height: auto;
-    color: white!important;
 
     .close-modal {
       position: absolute;
@@ -323,6 +324,48 @@ body {
         background: $color-21;
       }
     }
+
+    .card-wrapper-manager {
+      display: flex;
+      flex-direction: row;
+      width: 100%;
+      height: 100%;
+
+      .card-one {
+        display: flex;
+        flex-direction: row;
+        width: 100%;
+        height: auto;
+
+        .player-image {
+          width: 150px;
+          height: 150px;
+          margin: 10px;
+          border: none;
+          border-radius: 8px;
+          overflow: hidden;
+        }
+
+        .text-container {
+          padding: 5px 5px 5px 0;
+          .text-p {
+            width: auto;
+            height: auto;
+            min-height: 24px;
+            line-height: 24px;
+            font-weight: 400;
+            font-size: 16px;
+            color: $color-3;
+
+            span {
+              padding-left: 5px;
+              font-style: italic;
+              color: $color-8;
+            }
+          }
+        }
+      }
+    }
   }
 
   .overlay-modal {
@@ -332,7 +375,7 @@ body {
     bottom: 0;
     position: fixed;
     z-index: 12002;
-    background: $color-2;
+    background: $color-11;
     animation: animationModal 1s both ease;
   }
 }
