--- a/src/modules/pages/admin-dashboard/Admin-dashboard.scss
+++ b/src/modules/pages/admin-dashboard/Admin-dashboard.scss
@@ -146,8 +146,12 @@
       text-align: center;
     }
 
-    .submit-table {
+    .action-table {
       width: 200px !important;
+    }
+
+    .age-stat-table{
+      width: 100px !important;
     }
 
     .in-manager {
