--- a/src/modules/pages/faq/Faq.scss
+++ b/src/modules/pages/faq/Faq.scss
@@ -193,9 +193,9 @@
   }
 
   .one-input:checked ~ .one-label {
-    margin-bottom: 0px !important;
-    border-bottom-left-radius: 0px !important;
-    border-bottom-right-radius: 0px !important;
+    margin-bottom: 0 !important;
+    border-bottom-left-radius: 0 !important;
+    border-bottom-right-radius: 0 !important;
     background: $color-7 !important;
     color: $color-8 !important;
 
