--- a/src/common/footer/Footer.scss
+++ b/src/common/footer/Footer.scss
@@ -7,7 +7,7 @@
   }
 }
 
-.fotter {
+.footer {
   width: 100%;
   height: 300px;
   display: flex;
@@ -200,7 +200,7 @@
 }
 
 @media screen and (max-width: 480px) {
-  .fotter {
+  .footer {
     height: 200px;
 
     .rows-bt {
