--- a/src/modules/pages/no-access/NoAccess.scss
+++ b/src/modules/pages/no-access/NoAccess.scss
@@ -39,10 +39,10 @@ $animationTime: 2s;
 
 @keyframes type {
   from {
-    box-shadow: inset -3px 0px 0px $color-3;
+    box-shadow: inset -3px 0 0 $color-3;
   }
   to {
-    box-shadow: inset -3px 0px 0px transparent;
+    box-shadow: inset -3px 0 0 transparent;
   }
 }
 
