--- a/src/modules/pages/not-found/NotFound.scss
+++ b/src/modules/pages/not-found/NotFound.scss
@@ -2,10 +2,10 @@
 
 @keyframes type {
   from {
-    box-shadow: inset -3px 0px 0px $color-3;
+    box-shadow: inset -3px 0 0 $color-3;
   }
   to {
-    box-shadow: inset -3px 0px 0px transparent;
+    box-shadow: inset -3px 0 0 transparent;
   }
 }
 
