багато правок, рефакторінг роутів, галерея для юзера, видалення лишніх файлів, та ще маленькі фікси по стилям

--- a/src/modules/components/[0_grouped_0]-Profile/player-cabinet/Player-cabinet.scss
+++ b/src/modules/components/[0_grouped_0]-Profile/player-cabinet/Player-cabinet.scss
@@ -15,6 +15,8 @@
     width: 100px;
     height: 100px;
     margin: 0 auto;
+    border: none;
+    border-radius: 5px;
   }
 
   .h5-name-player {
