--- a/src/Variables.scss
+++ b/src/Variables.scss
@@ -21,3 +21,6 @@ $color-15: #0a1217;
 $color-21: rgba(1, 22, 37, 1);
 $color-22: rgba(255, 255, 255, 0.1);
 
+$fontCustom1: "Minecraft Title Cyrillic";
+$fontCustom2: "Minecraft Rus";
+$fontCustom3: "Minecraft Ten";
