--- a/src/modules/components/[0_grouped_0]-Maps-all-comp/Add-style-maps.scss
+++ b/src/modules/components/[0_grouped_0]-Maps-all-comp/Add-style-maps.scss
@@ -65,6 +65,7 @@
         outline: none !important;
         padding: 7px;
         background: $color-7;
+        transition: all 0.35s ease;
 
         &:hover,
         &:active,
@@ -118,6 +119,7 @@
             outline: none !important;
             padding: 5px;
             background: $color-7;
+            transition: all 0.35s ease;
 
             &:hover,
             &:active,
@@ -149,14 +151,24 @@
         text-align: center;
         margin: 0 auto;
         cursor: pointer;
+        transition: all 0.35s ease;
       }
 
       .bt-add {
         background: $color-4;
+
+        &:hover {
+          background: $color-6;
+          color: $color-2;
+        }
       }
 
       .bt-del {
         background: $color-9;
+
+        &:hover {
+          color: $color-2;
+        }
       }
     }
   }
